2017-11-09    <cerebrum@cleomedes.uit.no>

	* import_PAGA.py (process_person): Added code that will collect
	campus information for all paga persons

2017-11-08    <cerebrum@cleomedes.uit.no>

	* ad_export_autogroups_undervisning.py: need to import access_FS
	from the no tree in order to import override function
	underv_enhet_xml_parser and underv_enhet_xml_parser

2017-11-07    <cerebrum@cleomedes.uit.no>

	* process_uit_email.py (calculate_uit_emails): updated script to
	run propperly on cleomedes withouth breaking. Also fixed function
	that calculates current and new primary email address. The
	previous version was not able to calculate new preimary correctly.


2017-10-27    <cerebrum@cleomedes.uit.no>

	* process_ou_groups.py: rewrote script to collect Stedkode class
	from import instead of factory.

2017-10-23    <cerebrum@cleomedes.uit.no>

	* export_safecom.py (safecom_export.list_affiliations): Fixed
	numerous errors. all names are now collected with the
	ou.get_name_with_language() function. Updated sito path
	name. Although this script works for both uit and sito persons,
	the sito part is only partially successfull when collecting ou
	info. in paricular sito units does not have stedkode and thus
	sko.whatever() will fail. rewrite this script to use ou.whatever()
	when processing sito org units

2017-10-20    <cerebrum@cleomedes.uit.no>

	* process_students.py (get_existing_accounts): added code to
	filter out accounts with sito spread, they are not to be processed
	by process_students.py

2017-10-03  Karen  <cerebrum@cleomedes.uit.no>

    * import_PAGA.py (process_person): Fixed y2k bug. The problem is really in 
    Cerebrum.modules.no.fodselsnr, but is now handled in import_PAGA.

2017-09-28  Karen   <cerebrum@cleomedes.uit.no>

    * export_pagaweb_users.py (parse_paga_csv): Added timelønnet to list of valid arbeidsforhold.

2017-08-31  Karen   <cerebrum@cleomedes.uit.no>
